feat(runtime): minimal startup and runtime settings hot reload
Move Agent / CodeGraph / Git / QueryPlanner runtime params from
application.yml into a DB-backed settings service that can be hot-reloaded
from the settings page (DB first, yml fallback).

Backend:
- new cn.welsione.ascoder.runtime module (entity/repo/service/cache/event/controller)
- new cn.welsione.ascoder.config package (AscoderProperties + submodule Properties)
- new systemSettings table + V42 migration
- refactor 5 targets to read RuntimeSettingsService:
  LlmProviderModelFactory / SseConnectionManager / GitRepositoryService /
  CodeGraphConfiguration (+ CliCodeGraphClient supplier overload) /
  AgenticQuestionPlanner
- strip LLM-overlap fields from .env.example and application.yml

Frontend:
- new types/runtimeSetting.ts, services/runtimeSettingsApi.ts,
  stores/runtimeSetting.ts
- new GeneralSection.vue (per-category runtime params form)
- wire General section into SettingsSidebar / SettingsView

Docs:
- docs/runtime-settings.md: three-layer model / whitelist / restart boundary

Tests:
- new RuntimeSettingsServiceTests (whitelist / type coercion / event publish)
- fix existing LlmProviderModelFactoryTests / GitRepositoryServiceTests /
  GitProvenanceToolsTests / RepositoryInspectionToolsTests /
  AgenticQuestionPlannerTests for new constructor signatures

Note: thread pool (agent.stream-core/max/queue) and codegraph.executable
still require restart; other items take effect on next request.